// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`optional members should infer a detail based on list results 1`] = `
SomeResource {
  "id": "1",
  "name": "fails",
  "things": [],
}
`;

exports[`optional members should infer even with nested missing 1`] = `
{
  "a": SomeResource {
    "id": "2",
    "name": "works",
    "things": [
      Nested {
        "id": "1",
        "name": "first",
      },
      Nested {
        "id": "2",
        "name": "second",
      },
    ],
  },
  "b": Nested {
    "id": "2",
    "name": "second",
  },
}
`;

exports[`optional members should return all members of list without suspending 1`] = `
[
  SomeResource {
    "id": "1",
    "name": "fails",
    "things": [],
  },
  SomeResource {
    "id": "2",
    "name": "works",
    "things": [
      Nested {
        "id": "1",
        "name": "first",
      },
      Nested {
        "id": "2",
        "name": "second",
      },
    ],
  },
  SomeResource {
    "id": "3",
    "name": "works",
    "things": [
      Nested {
        "id": "2",
        "name": "second",
      },
    ],
  },
]
`;
